# secure-file-tool

./: CMakeLists.txt  README.md  config.txt
src/: audit_log.cpp  audit_log.h  crypto_utils.cpp  crypto_utils.h  file_io.cpp  file_io.h  main.cpp
